# Shopee-Copycat

backend/: .dockerignore  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0f402359173d_add_role_to_user.py  1c5fccef4111_add_seller_table.py  2af2edeb9123_add_shipping_address_to_the_seller_order.py  35b58fc88ef0_add_is_seller_to_user.py  3e09ffdb035c_add_image_on_order_item.py  4a8e64fd7105_add_phone_to_sellers.py  4f03cbd57bb4_add_status_to_product.py  5486042b4b30_populate_seller_id_for_existing_orders.py  605f415d2e83_fix_product_owner_id_and_update_datetime.py  71672cd00656_add_seller_status_remove_is_active.py  7d056f27be57_add_order_info.py  7d2a18455fbb_add_status_on_product_and_order.py  875f0ec2c531_create_order_addresses_table.py  8b63e09ce553_add_seller_order.py  8e59735baab8_initial_migration.py  aa58d23e8350_add_created_and_updated_at_to_product.py  af1e5e34aae7_change_phone_and_postal_code_to_string.py  c8ca64e4af0c_fix_order_status.py  cbadd7edfc66_add_more_details_to_seller.py  d40a3278fa3d_add_user_address.py  d5f1dc4c57c0_add_seller_id.py  de9874d1c795_populate_seller_id_for_existing_products.py  f8915d778922_add_first_name_and_last_name_to_user.py
backend/app/: app.py  db.py
backend/app/core/: cache.py  config.py  dependencies.py  engine.py  redis.py  upload.py
backend/app/models/: __init__.py  order.py  product.py  seller.py  seller_order.py  user_address.py  user_order.py  users.py
backend/app/routes/: admin_seller.py  admin_users.py  cart.py  checkout.py  (+9 more)
(+47 files in other folders)
